@@ -7,3 +7,5 @@ require "wit_ruby/version"
 require "wit_ruby/rest/client"
 require "wit_ruby/rest/session"
 require "wit_ruby/rest/result"
+require "wit_ruby/rest/message"
+require "wit_ruby/rest/intent"
