@@ -1,0 +1,10 @@
+## intent.rb
+## Wrapper for the superclass Result for intent specific results
+
+module Wit
+  module REST
+    class Intent < Result
+
+    end
+  end
+end
